--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 <body>
     <h1>Hello PNv21A</h1>
     <button>Login</button>
+    <button>Register</button>
+    <button>Hello</button>
 </body>
 
 </html>
